# linx-app-backend

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.cli  Makefile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  rustfmt.toml
.github/workflows/: ci.yml  docker-publish.yml
crates/bento-cli/: Cargo.toml
crates/bento-cli/src/: constants.rs  lib.rs  types.rs
crates/bento-core/src/: db.rs  ws.rs
crates/bento-server/: Cargo.toml
crates/bento-server/src/: error.rs  lib.rs
crates/bento-server/src/handler/: block.rs  event.rs  transaction.rs
examples/lending-indexer/: config.example.toml  config.toml
examples/linx-indexer/: Cargo.toml  config.example.toml  config.toml
examples/linx-indexer/migrations/2025-05-14-055240_create_transfers/: down.sql  up.sql
examples/linx-indexer/migrations/2025-06-13-075207_swaps/: down.sql  up.sql
examples/linx-indexer/migrations/2025-06-14-024102_dex_pools/: up.sql
examples/linx-indexer/migrations/2025-06-25-010528_add_indexes_for_account_transactions/: down.sql  up.sql
examples/linx-indexer/migrations/2025-09-17-090359_create_lending_markets_table/: down.sql  up.sql
examples/linx-indexer/migrations/2025-09-20-124617_create_lending_events_table/: down.sql  up.sql
examples/linx-indexer/migrations/2025-09-23-062910_create_lending_deposits_snapshots_table/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-10-091353_create_points_config/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-10-091659_create_points_multipliers/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-10-091852_create_referral_codes/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-10-092014_create_user_referrals/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-10-092322_create_points_snapshots/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-10-092724_create_points_transactions/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-12-091050_add_snapshot_date_to_points_transactions/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-13-080242_optimize_points_snapshots_indexes/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-19-091710_create_points_seasons/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-19-091914_add_season_id_to_points_snapshots/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-19-092627_add_season_id_to_points_transactions/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-19-154722_change_points_to_integer/: down.sql  up.sql
examples/linx-indexer/migrations/2025-11-24-174529_remove_referral_code_from_user_referrals/: down.sql  up.sql
examples/linx-indexer/migrations/2025-12-11-132131_create_market_state_snapshots/: down.sql  up.sql
examples/linx-indexer/migrations/2025-12-19-152319_add_blocks_gap_detection_index/: down.sql  up.sql
examples/linx-indexer/migrations/2026-01-06-103709_rename_deposits_to_position_snapshots/: down.sql  up.sql
examples/linx-indexer/migrations/2026-01-07-083101_add_account_transactions_performance_index/: down.sql  up.sql
examples/linx-indexer/migrations/2026-01-07-085013_remove_points_transactions/: down.sql  up.sql
examples/linx-indexer/migrations/2026-01-11-033631_create_linx_transactions/: down.sql  up.sql
examples/linx-indexer/migrations/2026-01-12-073553_add_multihop_swap_fields/: down.sql  up.sql
examples/linx-indexer/migrations/2026-01-14-050150_update_transfers_unique_constraint/: down.sql  up.sql
examples/linx-indexer/migrations/2026-01-14-070114_refactor_account_transactions_with_jsonb/: down.sql  up.sql
examples/linx-indexer/migrations/2026-02-25-023651_add_position_snapshots_address_timestamp_index/: down.sql  up.sql
examples/linx-indexer/migrations/2026-02-27-213500_add_covering_index_for_position_history/: down.sql  up.sql
examples/linx-indexer/migrations/2026-03-27-100000_add_tokens_allocation_to_seasons/: down.sql  up.sql
examples/linx-indexer/migrations/2026-04-16-120000_add_apy_snapshots_and_collateral_usd/: down.sql  up.sql
examples/linx-indexer/migrations/2026-04-16-140000_drop_interest_rate_from_market_state_snapshots/: down.sql  up.sql
examples/linx-indexer/migrations/2026-04-17-120000_add_lending_stats_snapshots/: down.sql  up.sql
examples/linx-indexer/migrations/2026-04-20-100000_extend_market_state_snapshots/: down.sql  up.sql
examples/linx-indexer/migrations/2026-04-28-100000_drop_market_apy_snapshots/: down.sql  up.sql
examples/linx-indexer/migrations/2026-04-29-100000_add_bad_debt_usd_to_market_state_snapshots/: down.sql  up.sql
examples/linx-indexer/src/: config.rs  constants.rs  crypto.rs  jobs.rs  lib.rs  models.rs  processors.rs  repository.rs  routers.rs  schema.rs  services.rs  share_image.rs
examples/linx-indexer/src/models/: account_transactions.rs  lending.rs  linx_transaction.rs  new_account_transactions.rs  points.rs  pools.rs
examples/linx-indexer/src/processors/: classifier.rs  contract_call_processor.rs  dex_processor.rs  lending_processor.rs  transfer_processor.rs
examples/linx-indexer/src/processors/fixtures/: alph_transfer_tx.json  alph_transfer_with_gas_payer_tx.json  block_entry.json  block_reward_tx.json  fungible_token_transfer_tx.json  fungible_token_transfer_with_gas_payer_tx.json  multiple_token_transfers_tx.json
examples/linx-indexer/src/repository/: account_transactions_repository.rs  lending_repository.rs  linx_transactions_repository.rs  points_repository.rs  pool_repository.rs
examples/linx-indexer/src/routers/: account_transactions_router.rs  lending_router.rs  points_router.rs  stats_router.rs  transaction_router.rs
examples/linx-indexer/src/services/: deposit_snapshot_service.rs  gap_detection_service.rs  market_apy_service.rs  market_state_snapshot_service.rs  oracle_price_service.rs  points_calculator_service.rs  position_snapshot_service.rs  stats_snapshot_service.rs
examples/linx-indexer/src/services/price/: linx_price_service.rs  oracle_price_service.rs  price_service.rs  token_service.rs
(+28 files in other folders)
