[package]
name = "bento-cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bento-core = { path = "../../crates/bento-core" }
bento-server = { path = "../../crates/bento-server" }
bento-types = { path = "../../crates/bento-types" }

anyhow.workspace = true
clap.workspace = true
dotenv.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
tempfile.workspace = true
utoipa-axum.workspace = true
