[package]
name = "bento-server"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bento-types = { path = "../../crates/bento-types" }
bento-core = { path = "../../crates/bento-core" }
bento-trait = { path = "../../crates/bento-trait" }

serde_json.workspace = true
serde.workspace = true
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
diesel.workspace = true
tracing-subscriber.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-axum.workspace = true
utoipa.workspace = true
thiserror.workspace = true
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
