[package]
name = "linx-indexer"
version = "1.1.0"
edition = "2024"

[[bin]]
name = "bento"
path = "src/bin/main.rs"

[dependencies]
bento-core = { path = "../../crates/bento-core" }
bento-cli = { path = "../../crates/bento-cli" }
bento-types = { path = "../../crates/bento-types" }
bento-trait = { path = "../../crates/bento-trait" }
bento-server = { path = "../../crates/bento-server" }
clap.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
diesel-async.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
bigdecimal.workspace = true
diesel-enum.workspace = true
chrono.workspace = true
async-trait.workspace = true
dotenv.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
axum.workspace = true
utoipa-axum.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
bs58 = "0.5.1"
rand.workspace = true

[dev-dependencies]
mockall.workspace = true
